--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.17]
+        go-version: [1.17, 1.18, 1.19]
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
